# nostr.el

./: .envrc  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  TODO.md  bech32-test.el  bech32.el  manifest.scm  nostr-actions.el  nostr-backend.el  nostr-compose.el  nostr-daemon.el  nostr-db.el  nostr-discover.el  nostr-dispatch.el  nostr-event.el  nostr-media.el  nostr-nip.el  nostr-notifications.el  nostr-profile.el  nostr-reactions.el  nostr-relay.el  nostr-relays.el  nostr-search.el  nostr-setup.el  nostr-share.el  nostr-test.el  nostr-thread.el  nostr-timeline.el  nostr-ui.el  nostr-upload.el  nostr-url.el  nostr.el
.claude/workflows/: nostr-loop.js
.github/workflows/: backend-release.yml
backend/: Cargo.toml
backend/src/: daemon.rs  lib.rs  lisp.rs  main.rs  store.rs
backend/tests/: cli.rs
tests/: nostr-live-relay-smoke-test.el  nostr-media-nip-test.el  nostr-operational-buffers-test.el  nostr-perf-test.el  nostr-relay-lifecycle-test.el  nostr-relay-list-test.el  nostr-setup-test.el  nostr-share-test.el  nostr-ui-buffers-test.el  nostr-ui-card-test.el
tests/e2e/: README.md  nostr-e2e-driver.el  run-e2e.sh
