[package]
name = "nostr-el-backend"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
nostr-sdk = { version = "0.44.1", default-features = false }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
thiserror = "2.0.11"
