[package]
name = "nostr-el-backend"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.23", features = ["derive"] }
nostr-sdk = { version = "0.44.1", default-features = false }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
thiserror = "2.0.11"
tokio = { version = "1.52", features = ["rt", "macros", "sync", "time", "io-std", "io-util", "net"] }
